--- a/daftarisi.html
+++ b/daftarisi.html
@@ -30,7 +30,7 @@
 <link href='https://plus.google.com/117950600521728942551' rel='me'/>
 <link href='https://plus.google.com/117950600521728942551' rel='publisher'/>
 <!--[if IE]> <script> (function() { var html5 = ("abbr,article,aside,audio,canvas,datalist,details," + "figure,footer,header,hgroup,mark,menu,meter,nav,output," + "progress,section,time,video").split(','); for (var i = 0; i < html5.length; i++) { document.createElement(html5[i]); } try { document.execCommand('BackgroundImageCache', false, true); } catch(e) {} })(); </script> <![endif]-->
-<title>Sitemap</title>
+<title>Sitemap PG</title>
 <meta content='Pemburu Gratisan' property='og:site_name'/>
 <meta content='https://lh3.googleusercontent.com/-dc04ytkXoQI/WWgvyAdQoWI/AAAAAAAAAN8/HuYoDvB3Ib82oTaiBEt4mGtV80gNx7LNwCEwYBhgL/w135-h140-p/PPG.png' property='og:image'/>
 <meta content='TZ5oz7nKEPsF6Ioeikvi1ekEjMm7QvTf_ysqNm7BVYU' name='google-site-verification'/>
